🎮 완전 로컬 실행 버전 적용

--- a/games/bubble/index.html
+++ b/games/bubble/index.html
@@ -1,8 +1,17 @@
+
 <!DOCTYPE html>
 <html>
-<head><meta charset="UTF-8"><title>Bubble Trouble</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>🐉 Bubble Trouble</title>
+  <style>
+    body { background:#222; color:#fff; font-family:sans-serif; text-align:center; }
+    iframe { width: 800px; height: 600px; border:none; margin-top:20px; }
+  </style>
+</head>
 <body>
-  <h2>Bubble Trouble</h2>
-  <iframe src="https://html5.gamedistribution.com/rvvASMiR/ea82d41ec3cb43839d49c94f9750e71b/index.html" width="800" height="600" frameborder="0"></iframe>
+  <h1>🐉 Bubble Trouble</h1>
+  <p>게임이 아래에 로드됩니다.</p>
+  <iframe src="bubble.html"></iframe>
 </body>
 </html>
