--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,14 +13,10 @@
 </head>
 <body>
   <h1>🎮 우리 오락실 v2 🎮</h1>
-  <p>이제 모든 게임이 <strong>우리 호스팅</strong>에서 실행됩니다!</p>
+  <p>이제 모든 게임이 <strong>로컬에서 완전 실행</strong>됩니다!</p>
   <ul>
-    <li><a href="games/prince/index.html">👑 Prince of Persia</a></li>
-    <li><a href="games/galaga/index.html">🚀 Galaga</a></li>
     <li><a href="games/bubble/index.html">🐉 Bubble Trouble</a></li>
     <li><a href="games/brawler/index.html">👊 Beat’em Up</a></li>
-    <li><a href="games/snow/index.html">❄️ Snow Puzzle</a></li>
-    <li><a href="games/shooter/index.html">⚡ Gemini Wing Style</a></li>
   </ul>
 </body>
 </html>
