--- a/games/brawler/index.html
+++ b/games/brawler/index.html
@@ -1,8 +1,16 @@
+
 <!DOCTYPE html>
 <html>
-<head><meta charset="UTF-8"><title>Beat'em Up</title></head>
+<head>
+  <meta charset="UTF-8">
+  <title>👊 Beat'em Up</title>
+  <style>
+    body { background:#111; color:#fff; text-align:center; font-family:sans-serif; }
+    iframe { width: 800px; height: 600px; border: none; margin-top:20px; }
+  </style>
+</head>
 <body>
-  <h2>Beat'em Up</h2>
-  <iframe src="https://xem.github.io/beat-em-up/" width="800" height="600" frameborder="0"></iframe>
+  <h1>👊 Beat'em Up</h1>
+  <iframe src="brawler.html"></iframe>
 </body>
 </html>
