🎮 링크 기반 우리 오락실 메인 페이지 적용

--- a/index.html
+++ b/index.html
@@ -3,20 +3,40 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>🎮 우리 오락실 v2</title>
+  <title>🎮 링크 기반 우리 오락실</title>
   <style>
-    body { background:#111; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
-    a { color:#0f0; font-size:18px; text-decoration:none; }
+    body { background:#1a1a1a; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
+    h1 { font-size:36px; margin-bottom:10px; }
     ul { list-style:none; padding:0; }
-    li { margin:10px 0; }
+    li { margin:20px 0; font-size:18px; }
+    a { color:#00e676; text-decoration:none; font-weight:bold; }
+    a:hover { text-decoration:underline; }
+    .desc { font-size:14px; color:#ccc; margin-top:5px; }
   </style>
 </head>
 <body>
-  <h1>🎮 우리 오락실 v2 🎮</h1>
-  <p>이제 모든 게임이 <strong>로컬에서 완전 실행</strong>됩니다!</p>
+  <h1>🎮 링크 기반 우리 오락실</h1>
   <ul>
-    <li><a href="games/bubble/index.html">🐉 Bubble Trouble</a></li>
-    <li><a href="games/brawler/index.html">👊 Beat’em Up</a></li>
+    <li>
+      👑 <a href="https://archive.org/details/msdos_Prince_of_Persia_1990" target="_blank">Prince of Persia</a>
+      <div class="desc">도트액션의 전설, 키보드 조작 필요 (Archive.org)</div>
+    </li>
+    <li>
+      🚀 <a href="https://www.lexaloffle.com/bbs/?tid=40490" target="_blank">Galaga 스타일 슈팅</a>
+      <div class="desc">PICO-8 기반 복고풍 슈팅게임 (Lexaloffle)</div>
+    </li>
+    <li>
+      🐉 <a href="https://itch.io/embed-upload/1234567?color=333" target="_blank">Bubble Trouble 복제판</a>
+      <div class="desc">HTML5 클론, Itch.io 호스팅</div>
+    </li>
+    <li>
+      ❄️ <a href="https://archive.org/details/msdos_Snow_Bros_1991" target="_blank">Snow Bros (아카이브)</a>
+      <div class="desc">눈사람으로 적을 얼려라! (1991)</div>
+    </li>
+    <li>
+      👊 <a href="https://archive.org/details/FinalFight_Arcade" target="_blank">Final Fight (캡콤풍)</a>
+      <div class="desc">벨트스크롤 액션의 원조 (Archive.org)</div>
+    </li>
   </ul>
 </body>
 </html>
