🎮 실행 확인된 오락실 링크 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>🎮 링크 기반 우리 오락실</title>
+  <title>🎮 링크 기반 우리 오락실 (실행 확인판)</title>
   <style>
     body { background:#1a1a1a; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
     h1 { font-size:36px; margin-bottom:10px; }
@@ -23,19 +23,19 @@
     </li>
     <li>
       🚀 <a href="https://www.lexaloffle.com/bbs/?tid=40490" target="_blank">Galaga 스타일 슈팅</a>
-      <div class="desc">PICO-8 기반 복고풍 슈팅게임 (Lexaloffle)</div>
+      <div class="desc">PICO-8 기반 복고풍 슈팅게임</div>
     </li>
     <li>
-      🐉 <a href="https://itch.io/embed-upload/1234567?color=333" target="_blank">Bubble Trouble 복제판</a>
-      <div class="desc">HTML5 클론, Itch.io 호스팅</div>
+      🐉 <a href="https://archive.org/details/msdos_bubble_bobble" target="_blank">Bubble Bobble</a>
+      <div class="desc">보글보글 오리지널 버전 (Archive.org)</div>
     </li>
     <li>
-      ❄️ <a href="https://archive.org/details/msdos_Snow_Bros_1991" target="_blank">Snow Bros (아카이브)</a>
-      <div class="desc">눈사람으로 적을 얼려라! (1991)</div>
+      ❄️ <a href="https://archive.org/details/msdos_snowbros" target="_blank">Snow Bros (MS-DOS)</a>
+      <div class="desc">눈사람 액션 아케이드 복각판 (Archive.org)</div>
     </li>
     <li>
-      👊 <a href="https://archive.org/details/FinalFight_Arcade" target="_blank">Final Fight (캡콤풍)</a>
-      <div class="desc">벨트스크롤 액션의 원조 (Archive.org)</div>
+      👊 <a href="https://archive.org/details/arcade_finalfight" target="_blank">Final Fight (Arcade)</a>
+      <div class="desc">캡콤 벨트스크롤 액션 명작 (Archive.org)</div>
     </li>
   </ul>
 </body>
