✅ 오락실 최종판 반영

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>🎮 링크 기반 우리 오락실 (실행 확인판)</title>
+  <title>🎮 링크 기반 우리 오락실 (최종 확인판)</title>
   <style>
     body { background:#1a1a1a; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
     h1 { font-size:36px; margin-bottom:10px; }
@@ -19,23 +19,23 @@
   <ul>
     <li>
       👑 <a href="https://archive.org/details/msdos_Prince_of_Persia_1990" target="_blank">Prince of Persia</a>
-      <div class="desc">도트액션의 전설, 키보드 조작 필요 (Archive.org)</div>
-    </li>
-    <li>
-      🚀 <a href="https://www.lexaloffle.com/bbs/?tid=40490" target="_blank">Galaga 스타일 슈팅</a>
-      <div class="desc">PICO-8 기반 복고풍 슈팅게임</div>
+      <div class="desc">도스박스 내장, 키보드로 바로 플레이 가능 (Archive.org)</div>
     </li>
     <li>
       🐉 <a href="https://archive.org/details/msdos_bubble_bobble" target="_blank">Bubble Bobble</a>
-      <div class="desc">보글보글 오리지널 버전 (Archive.org)</div>
+      <div class="desc">보글보글 클래식 DOS 버전 (Archive.org)</div>
     </li>
     <li>
-      ❄️ <a href="https://archive.org/details/msdos_snowbros" target="_blank">Snow Bros (MS-DOS)</a>
-      <div class="desc">눈사람 액션 아케이드 복각판 (Archive.org)</div>
+      ❄️ <a href="https://archive.org/details/msdos_snowbros" target="_blank">Snow Bros (MS‑DOS)</a>
+      <div class="desc">눈사람 액션, DOSBox로 실행됨 (Archive.org)</div>
     </li>
     <li>
-      👊 <a href="https://archive.org/details/arcade_finalfight" target="_blank">Final Fight (Arcade)</a>
-      <div class="desc">캡콤 벨트스크롤 액션 명작 (Archive.org)</div>
+      👊 <a href="https://archive.org/details/finalfight_snes_2" target="_blank">Final Fight (SNES)</a>
+      <div class="desc">SNES 에뮬 내장, 브라우저에서 플레이 가능 (Archive.org)</div>
+    </li>
+    <li>
+      🚀 <a href="https://www.lexaloffle.com/bbs/?tid=40490" target="_blank">Galaga 스타일 슈팅</a>
+      <div class="desc">PICO‑8 기반, Lexaloffle 페이지에서 플레이</div>
     </li>
   </ul>
 </body>
