✅ 모든 게임 실행 확인 링크로 수정

--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>🎮 링크 기반 우리 오락실 (최종 확인판)</title>
+  <title>🎮 우리 오락실 (실행 확인판)</title>
   <style>
-    body { background:#1a1a1a; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
-    h1 { font-size:36px; margin-bottom:10px; }
+    body { background:#111; color:#fff; font-family:sans-serif; text-align:center; padding:20px; }
+    a { color:#0f0; font-size:18px; text-decoration:none; }
     ul { list-style:none; padding:0; }
-    li { margin:20px 0; font-size:18px; }
-    a { color:#00e676; text-decoration:none; font-weight:bold; }
-    a:hover { text-decoration:underline; }
+    li { margin:10px 0; }
     .desc { font-size:14px; color:#ccc; margin-top:5px; }
   </style>
 </head>
 <body>
-  <h1>🎮 링크 기반 우리 오락실</h1>
+  <h1>🎮 우리 오락실</h1>
+  <p>💡 모든 게임은 새 창에서 실행됩니다. 팝업 차단을 해제해주세요!</p>
   <ul>
     <li>
       👑 <a href="https://archive.org/details/msdos_Prince_of_Persia_1990" target="_blank">Prince of Persia</a>
-      <div class="desc">도스박스 내장, 키보드로 바로 플레이 가능 (Archive.org)</div>
-    </li>
-    <li>
-      🐉 <a href="https://archive.org/details/msdos_bubble_bobble" target="_blank">Bubble Bobble</a>
-      <div class="desc">보글보글 클래식 DOS 버전 (Archive.org)</div>
-    </li>
-    <li>
-      ❄️ <a href="https://archive.org/details/msdos_snowbros" target="_blank">Snow Bros (MS‑DOS)</a>
-      <div class="desc">눈사람 액션, DOSBox로 실행됨 (Archive.org)</div>
-    </li>
-    <li>
-      👊 <a href="https://archive.org/details/finalfight_snes_2" target="_blank">Final Fight (SNES)</a>
-      <div class="desc">SNES 에뮬 내장, 브라우저에서 플레이 가능 (Archive.org)</div>
+      <div class="desc">도스박스 내장, 키보드로 조작</div>
     </li>
     <li>
       🚀 <a href="https://www.lexaloffle.com/bbs/?tid=40490" target="_blank">Galaga 스타일 슈팅</a>
-      <div class="desc">PICO‑8 기반, Lexaloffle 페이지에서 플레이</div>
+      <div class="desc">PICO‑8 기반 브라우저 플레이</div>
+    </li>
+    <li>
+      🐉 <a href="https://archive.org/details/BUBBLEBOBBLE_CGA" target="_blank">Bubble Bobble</a>
+      <div class="desc">보글보글 (DOS), 새 창에서 실행</div>
+    </li>
+    <li>
+      ❄️ <a href="https://archive.org/details/Snow_Bros._Nick_Tom_J_h2C" target="_blank">Snow Bros</a>
+      <div class="desc">제네시스 버전, 키보드 지원</div>
+    </li>
+    <li>
+      👊 <a href="https://archive.org/details/finalfight_snes_2" target="_blank">Final Fight (SNES)</a>
+      <div class="desc">SNES 에뮬, 키보드 플레이</div>
     </li>
   </ul>
 </body>
